--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,11 +12,11 @@
     {{ template "_internal/schema.html" .}}
     {{ partial "headstylevendor.html" . }}
     {{ partial "headstyleapp.html" . }}
-    <script defer src="/js/vendor.3iix.js"></script>
-    <script defer src="/js/bootstrap.24j4.js"></script>
-    <script defer src="/js/lang.27f1.js"></script>
+    <script defer src="/js/vendor.3iix.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
+    <script defer src="/js/bootstrap.24j4.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
+    <script defer src="/js/lang.27f1.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
     {{ $mainJs := resources.Get "js/app.js" | js.Build "app.js" | minify | fingerprint "md5" }}
-    <script defer type="text/javascript" src="{{ $mainJs.RelPermalink }}" ></script>
+    <script defer type="text/javascript" src="{{ $mainJs.RelPermalink }}" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
 </head>
 <body>
 <noscript>This website requires javascript to be functional. Please enable your javascript or get latest compatible browser. You will be redirected to Browse Happy Website.</noscript>
