--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,8 +1,4 @@
+{{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
 {{ .Content }}
-<ul class="contents">
-    {{ range .Paginator.Pages }}
-    <li>{{.Title}}</li>
-    {{ end }}
-</ul>
 {{ end }}
