--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,4 @@
+{{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
-<article>
     {{ .Content }}
-</article>
 {{ end }}
