--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -11,7 +11,9 @@
         background-color: rgba(0, 0, 0, 0.85);
         backdrop-filter: blur(12px);
     }
-
+    .q-page{
+        padding-bottom: 76px;
+    }
     .q-page p,
     .q-page ul,
     .q-page ol {
@@ -34,5 +36,11 @@
         [data-mode="aspect-fit"]>*:not(img) {
             padding: 0 8px;
         }
+    }
+    .footer-link{
+        color: inherit;
+        font-size: .75rem;
+        font-weight: 500;
+        text-decoration: none;
     }
 </style>
