--- a/layouts/authors/list.html
+++ b/layouts/authors/list.html
@@ -27,15 +27,81 @@
               </div>
         </q-img>
     </figure>
-    <h1 class="text-h4 text-weight-bolder q-ma-none">{{ .Params.name }}</h1>
+    <h1 class="text-h4 text-weight-bolder q-mt-md q-mb-none">{{ .Params.name }}
+        {{ with .Params.verify }}
+        {{ if eq . true }}
+        <span>
+            <svg style="width:24px;height:24px" aria-label="Verified account" viewBox="0 0 24 24" class="text-primary" title="Verified Account">
+                <path fill="currentColor" d="M12 1L3 5V11C3 16.55 6.84 21.74 12 23C17.16 21.74 21 16.55 21 11V5L12 1M15.08 16L12 14.15L8.93 16L9.74 12.5L7.03 10.16L10.61 9.85L12 6.55L13.39 9.84L16.97 10.15L14.26 12.5L15.08 16Z" />
+            </svg>
+            <q-tooltip class="bg-primary text-weight-bolder">Verified Account</q-tooltip>
+        </span>
+        {{ end }}
+        {{ end }}
+        {{ with .Params.admin }}
+        {{ if eq . true }}
+        <span>
+            <svg style="width:24px;height:24px" aria-label="Administrator" viewBox="0 0 24 24" class="text-blue-grey">
+                <path fill="currentColor" d="M12 1L21 5V11C21 16.55 17.16 21.74 12 23C6.84 21.74 3 16.55 3 11V5L12 1M16 14H8V15.5C8 15.77 8.19 15.96 8.47 16L8.57 16H15.43C15.74 16 15.95 15.84 16 15.59L16 15.5V14M17 8L17 8L14.33 10.67L12 8.34L9.67 10.67L7 8L7 8L8 13H16L17 8Z" />
+            </svg>
+            <q-tooltip class="bg-blue-grey text-weight-bolder">Administrator Account</q-tooltip>
+        </span>
+        {{ end }}
+        {{ end }}
+        {{ with .Params.vip }}
+        {{ if eq . true }}
+        <span>
+            <svg style="width:24px;height:24px" aria-label="VIP" viewBox="0 0 24 24" class="text-yellow">
+                <path fill="currentColor" d="M5 16L3 5L8.5 10L12 4L15.5 10L21 5L19 16H5M19 19C19 19.6 18.6 20 18 20H6C5.4 20 5 19.6 5 19V18H19V19Z" />
+            </svg>
+            <q-tooltip class="bg-yellow text-red text-weight-bolder">VIP Account</q-tooltip>
+        </span>
+        {{ end }}
+        {{ end }}
+    </h1>
 </header>
+<h2 class="sr-only">Social Media Links</h2>
+<p class="q-ma-none">
+    <span class="sr-only">Ikuti {{ .Params.name }} di sosial media berikut:</span>
+    {{ with .Params.twitter}}
+    <a href="https://twitter.com/{{.}}" target="_blank" rel="noopener noreferrer" class="inline-block q-py-sm q-pr-sm" style="color:#00acee" title="Ikuti {{$.Params.name}} di twitter">
+        <span class="q-icon" aria-hidden="true" role="presentation" style="vertical-align: text-top;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" /></svg></span>Twitter
+    </a>
+    {{ end }}
 
-<h2 class="sr-only">Bio</h2>
+    {{ with .Params.facebook}}    
+    <a href="https://facebook.com/{{.}}" target="_blank" rel="noopener noreferrer" class="inline-block q-py-sm q-pr-sm" style="color:#4267B2" title="Ikuti {{$.Params.name}} di facebook">
+        <span class="q-icon" aria-hidden="true" role="presentation" style="vertical-align: text-top;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z" /></svg></span>Facebook
+    </a>
+    {{ end }}
+
+    {{ with .Params.linkedin}}    
+    <a href="https://www.linkedin.com/in/{{.}}" target="_blank" rel="noopener noreferrer" class="inline-block q-py-sm q-pr-sm" style="color:#0e76a8" title="Ikuti {{$.Params.name}} di linkedin">
+        <span class="q-icon" aria-hidden="true" role="presentation" style="vertical-align: text-top;"><svg viewBox="0 0 24 24"> <path fill="currentColor" d="M19 3A2 2 0 0 1 21 5V19A2 2 0 0 1 19 21H5A2 2 0 0 1 3 19V5A2 2 0 0 1 5 3H19M18.5 18.5V13.2A3.26 3.26 0 0 0 15.24 9.94C14.39 9.94 13.4 10.46 12.92 11.24V10.13H10.13V18.5H12.92V13.57C12.92 12.8 13.54 12.17 14.31 12.17A1.4 1.4 0 0 1 15.71 13.57V18.5H18.5M6.88 8.56A1.68 1.68 0 0 0 8.56 6.88C8.56 5.95 7.81 5.19 6.88 5.19A1.69 1.69 0 0 0 5.19 6.88C5.19 7.81 5.95 8.56 6.88 8.56M8.27 18.5V10.13H5.5V18.5H8.27Z" /></svg></span>Linkedin
+    </a>
+    {{ end }}
+
+    {{ with .Params.telegram}}    
+    <a href="https://www.linkedin.com/in/{{.}}" target="_blank" rel="noopener noreferrer" class="inline-block q-py-sm q-pr-sm" style="color:#229ED9" title="Ikuti {{$.Params.name}} di telegram">
+        <span class="q-icon" aria-hidden="true" role="presentation" style="vertical-align: text-top;"><svg viewBox="0 0 30 30"> <path fill="currentColor" d="M 25.154297 3.984375 C 24.829241 3.998716 24.526384 4.0933979 24.259766 4.2011719 C 24.010014 4.3016357 23.055766 4.7109106 21.552734 5.3554688 C 20.048394 6.0005882 18.056479 6.855779 15.931641 7.7695312 C 11.681964 9.5970359 6.9042108 11.654169 4.4570312 12.707031 C 4.3650097 12.746607 4.0439208 12.849183 3.703125 13.115234 C 3.3623292 13.381286 3 13.932585 3 14.546875 C 3 15.042215 3.2360676 15.534319 3.5332031 15.828125 C 3.8303386 16.121931 4.144747 16.267067 4.4140625 16.376953 C 5.3912284 16.775666 8.4218473 18.015862 8.9941406 18.25 C 9.195546 18.866983 10.29249 22.222526 10.546875 23.044922 C 10.714568 23.587626 10.874198 23.927519 11.082031 24.197266 C 11.185948 24.332139 11.306743 24.45034 11.453125 24.542969 C 11.511635 24.579989 11.575789 24.608506 11.640625 24.634766 L 11.644531 24.636719 C 11.659471 24.642719 11.67235 24.652903 11.6875 24.658203 C 11.716082 24.668202 11.735202 24.669403 11.773438 24.677734 C 11.925762 24.726927 12.079549 24.757812 12.216797 24.757812 C 12.80196 24.757814 13.160156 24.435547 13.160156 24.435547 L 13.181641 24.419922 L 16.191406 21.816406 L 19.841797 25.269531 C 19.893193 25.342209 20.372542 26 21.429688 26 C 22.057386 26 22.555319 25.685026 22.875 25.349609 C 23.194681 25.014192 23.393848 24.661807 23.478516 24.21875 L 23.478516 24.216797 C 23.557706 23.798129 26.921875 6.5273437 26.921875 6.5273438 L 26.916016 6.5507812 C 27.014496 6.1012683 27.040303 5.6826405 26.931641 5.2695312 C 26.822973 4.8564222 26.536648 4.4608905 26.181641 4.2480469 C 25.826669 4.0352506 25.479353 3.9700339 25.154297 3.984375 z M 24.966797 6.0742188 C 24.961997 6.1034038 24.970391 6.0887279 24.962891 6.1230469 L 24.960938 6.1347656 L 24.958984 6.1464844 C 24.958984 6.1464844 21.636486 23.196371 21.513672 23.845703 C 21.522658 23.796665 21.481573 23.894167 21.439453 23.953125 C 21.379901 23.91208 21.257812 23.859375 21.257812 23.859375 L 21.238281 23.837891 L 16.251953 19.121094 L 12.726562 22.167969 L 13.775391 17.96875 C 13.775391 17.96875 20.331562 11.182109 20.726562 10.787109 C 21.044563 10.471109 21.111328 10.360953 21.111328 10.251953 C 21.111328 10.105953 21.035234 10 20.865234 10 C 20.712234 10 20.506484 10.14875 20.396484 10.21875 C 18.963383 11.132295 12.671823 14.799141 9.8515625 16.439453 C 9.4033769 16.256034 6.2896636 14.981472 5.234375 14.550781 C 5.242365 14.547281 5.2397349 14.548522 5.2480469 14.544922 C 7.6958673 13.491784 12.47163 11.434667 16.720703 9.6074219 C 18.84524 8.6937992 20.838669 7.8379587 22.341797 7.1933594 C 23.821781 6.5586849 24.850125 6.1218894 24.966797 6.0742188 z"/></svg></span>Telegram
+    </a>
+    {{ end }}
+
+    {{ with .Params.website}}    
+    <a href="{{.}}" target="_blank" rel="noopener noreferrer" class="inline-block" style="color:#616161" title="Ikuti {{$.Params.name}} di laman web">
+        <span class="q-icon" aria-hidden="true" role="presentation" style="vertical-align: text-top;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M16.36,14C16.44,13.34 16.5,12.68 16.5,12C16.5,11.32 16.44,10.66 16.36,10H19.74C19.9,10.64 20,11.31 20,12C20,12.69 19.9,13.36 19.74,14M14.59,19.56C15.19,18.45 15.65,17.25 15.97,16H18.92C17.96,17.65 16.43,18.93 14.59,19.56M14.34,14H9.66C9.56,13.34 9.5,12.68 9.5,12C9.5,11.32 9.56,10.65 9.66,10H14.34C14.43,10.65 14.5,11.32 14.5,12C14.5,12.68 14.43,13.34 14.34,14M12,19.96C11.17,18.76 10.5,17.43 10.09,16H13.91C13.5,17.43 12.83,18.76 12,19.96M8,8H5.08C6.03,6.34 7.57,5.06 9.4,4.44C8.8,5.55 8.35,6.75 8,8M5.08,16H8C8.35,17.25 8.8,18.45 9.4,19.56C7.57,18.93 6.03,17.65 5.08,16M4.26,14C4.1,13.36 4,12.69 4,12C4,11.31 4.1,10.64 4.26,10H7.64C7.56,10.66 7.5,11.32 7.5,12C7.5,12.68 7.56,13.34 7.64,14M12,4.03C12.83,5.23 13.5,6.57 13.91,8H10.09C10.5,6.57 11.17,5.23 12,4.03M18.92,8H15.97C15.65,6.75 15.19,5.55 14.59,4.44C16.43,5.07 17.96,6.34 18.92,8M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg></span>Website
+    </a>
+    {{ end }}
+
+</p>
+<h2 class="sr-only">About Author</h2>
 {{ .Content }}
 
-<h2>Articles</h2>
-{{ range .Data.Pages }}
-    <div>{{.Title}}</div>
+<h2>Artikel</h2>
+{{ range (where .Site.Pages "Section" "artikel") }}
+   {{ range .Pages }}
+      <a href="{{.Permalink}}" class="block">{{ .Title }}</a>
+   {{ end }}
 {{ end }}
 </article>
 
