--- a/layouts/authors/terms.html
+++ b/layouts/authors/terms.html
@@ -1,4 +1,8 @@
 {{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
-    {{ .Content }}
+{{ range (where .Site.Pages "Section" "artikel") }}
+   {{ range .Pages }}
+      {{ .Title }}
+   {{ end }}
+{{ end }}
 {{ end }}
