--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -57,19 +57,19 @@
         text-decoration: none;
     }
     
-    p{
-        word-break: break-all;
+    article{
+        word-wrap: break-word;
     }
 
     a.external,a.internal {
         border-bottom: 1px dotted;
-        color: #00b4ff;
+        color: #0969da;
         font-weight: 500;
         outline: 0;
         text-decoration: none;
         transition: opacity .2s;
         white-space: nowrap;
-        fill: #00b4ff;
+        fill: #0969da;
     }
     .external .q-icon{
         margin-left:4px;
