--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,9 @@
 {{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
 {{ .Content }}
+{{ range .Pages }}
+<li>
+    <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
+</li>
+{{ end }}
 {{ end }}
