--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,7 +1,7 @@
 {{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
 {{ .Content }}
-<h1>{{ .Title }}</h1>
+<h1 class="sr-only">{{ .Title }}</h1>
 {{ range .Pages }}
 <li>
     <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
