--- a/layouts/artikel/single.html
+++ b/layouts/artikel/single.html
@@ -37,7 +37,7 @@
                         <svg style="width:20px;height:20px" aria-label="Verified account" viewBox="0 0 24 24" class="text-primary" title="Verified Account">
                             <path fill="currentColor" d="M12 1L3 5V11C3 16.55 6.84 21.74 12 23C17.16 21.74 21 16.55 21 11V5L12 1M15.08 16L12 14.15L8.93 16L9.74 12.5L7.03 10.16L10.61 9.85L12 6.55L13.39 9.84L16.97 10.15L14.26 12.5L15.08 16Z" />
                         </svg>
-                        <q-tooltip class="bg-primary text-weight-bolder">Verified Account</q-tooltip>
+                        <q-tooltip class="bg-primary text-weight-bolder" anchor="top middle" self="center middle">Verified Account</q-tooltip>
                     </span>
                     {{ end }}
                     {{ end }}
@@ -47,7 +47,7 @@
                         <svg style="width:20px;height:20px" aria-label="Administrator" viewBox="0 0 24 24" class="text-blue-grey">
                             <path fill="currentColor" d="M12 1L21 5V11C21 16.55 17.16 21.74 12 23C6.84 21.74 3 16.55 3 11V5L12 1M16 14H8V15.5C8 15.77 8.19 15.96 8.47 16L8.57 16H15.43C15.74 16 15.95 15.84 16 15.59L16 15.5V14M17 8L17 8L14.33 10.67L12 8.34L9.67 10.67L7 8L7 8L8 13H16L17 8Z" />
                         </svg>
-                        <q-tooltip class="bg-blue-grey text-weight-bolder">Administrator Account</q-tooltip>
+                        <q-tooltip class="bg-blue-grey text-weight-bolder" anchor="top middle" self="center middle">Administrator Account</q-tooltip>
                     </span>
                     {{ end }}
                     {{ end }}
@@ -57,7 +57,7 @@
                         <svg style="width:20px;height:20px" aria-label="VIP" viewBox="0 0 24 24" class="text-yellow">
                             <path fill="currentColor" d="M5 16L3 5L8.5 10L12 4L15.5 10L21 5L19 16H5M19 19C19 19.6 18.6 20 18 20H6C5.4 20 5 19.6 5 19V18H19V19Z" />
                         </svg>
-                        <q-tooltip class="bg-yellow text-red text-weight-bolder">VIP Account</q-tooltip>
+                        <q-tooltip class="bg-yellow text-red text-weight-bolder" anchor="top middle" self="center middle">VIP Account</q-tooltip>
                     </span>
                     {{ end }}
                     {{ end }}</a>
@@ -104,24 +104,40 @@
         {{ end }}
         <div class="text-caption"><span class="sr-only">Diterbitkan pada </span>🕛 <time class="op-published" dateTime="{{.Date.Format "2006-01-02T15:04:05Z0700"}}">{{ .Date.Format "02 Jan 2006" }}</time><span class="sr-only">diubahsuai pada</span> 🕦 <time class="op-modified" dateTime="{{.Lastmod.Format "2006-01-02T15:04:05Z0700"}}">{{ .Lastmod.Format "02 Jan 2006" }}</time></div>
     </header>
-    <aside class="flex justify-start items-center q-my-md">
-        <div class="flex column justify-center items-center content-center q-mr-sm">
-            <span class="q-icon text-blue-grey" style="font-size: 24px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" /></svg></span>
-            <span style="font-size: 11px;">Share</span>
+    <aside class="q-my-md flex justify-between items-center">
+        <div class="flex justify-start items-center">
+            <div class="flex column justify-center items-center content-center q-mr-sm non-selectable">
+                <span class="q-icon text-blue-grey" style="font-size: 24px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" /></svg></span>
+                <span style="font-size: 11px;">Share</span>
+            </div>
+            <div class="q-gutter-xs">
+                <q-btn size="md" flat round color="primary" class="text-weight-bolder" >
+                    <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 38px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z" /></svg></span>
+                </q-btn>
+                <q-btn size="md" flat round color="light-blue" class="text-weight-bolder">
+                    <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 38px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" /></svg></span>
+                </q-btn>
+                <q-btn size="md" flat round color="green-14" class="text-weight-bolder">
+                    <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 38px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.36 3.45 16.86L2.05 22L7.3 20.62C8.75 21.41 10.38 21.83 12.04 21.83C17.5 21.83 21.95 17.38 21.95 11.92C21.95 9.27 20.92 6.78 19.05 4.91C17.18 3.03 14.69 2 12.04 2M12.05 3.67C14.25 3.67 16.31 4.53 17.87 6.09C19.42 7.65 20.28 9.72 20.28 11.92C20.28 16.46 16.58 20.15 12.04 20.15C10.56 20.15 9.11 19.76 7.85 19L7.55 18.83L4.43 19.65L5.26 16.61L5.06 16.29C4.24 15 3.8 13.47 3.8 11.91C3.81 7.37 7.5 3.67 12.05 3.67M8.53 7.33C8.37 7.33 8.1 7.39 7.87 7.64C7.65 7.89 7 8.5 7 9.71C7 10.93 7.89 12.1 8 12.27C8.14 12.44 9.76 14.94 12.25 16C12.84 16.27 13.3 16.42 13.66 16.53C14.25 16.72 14.79 16.69 15.22 16.63C15.7 16.56 16.68 16.03 16.89 15.45C17.1 14.87 17.1 14.38 17.04 14.27C16.97 14.17 16.81 14.11 16.56 14C16.31 13.86 15.09 13.26 14.87 13.18C14.64 13.1 14.5 13.06 14.31 13.3C14.15 13.55 13.67 14.11 13.53 14.27C13.38 14.44 13.24 14.46 13 14.34C12.74 14.21 11.94 13.95 11 13.11C10.26 12.45 9.77 11.64 9.62 11.39C9.5 11.15 9.61 11 9.73 10.89C9.84 10.78 10 10.6 10.1 10.45C10.23 10.31 10.27 10.2 10.35 10.04C10.43 9.87 10.39 9.73 10.33 9.61C10.27 9.5 9.77 8.26 9.56 7.77C9.36 7.29 9.16 7.35 9 7.34C8.86 7.34 8.7 7.33 8.53 7.33Z" /></svg></span>
+                </q-btn>
+            </div>
         </div>
-        <div class="q-gutter-xs">
-            <q-btn size="sm" flat round color="primary" class="text-weight-bolder" >
-                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z" /></svg></span>
+        <div class="q-gutter-sm">
+            <q-btn outline round v-on:click="fontMinus" aria-label="kurangkan saiz tulisan">
+                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,17L23,11.93L21.59,10.5L19,13.1V7H17V13.1L14.41,10.5L13,11.93L18,17Z" /></svg></span>
             </q-btn>
-            <q-btn size="sm" flat round color="light-blue" class="text-weight-bolder">
-                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" /></svg></span>
+            <q-btn outline round v-on:click="fontSize = 16" aria-label="kembali saiz normal tulisan">
+                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M13,3A9,9 0 0,0 4,12H1L4.89,15.89L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3Z" /></svg></span>
             </q-btn>
-            <q-btn size="sm" flat round color="green-14" class="text-weight-bolder">
-                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.36 3.45 16.86L2.05 22L7.3 20.62C8.75 21.41 10.38 21.83 12.04 21.83C17.5 21.83 21.95 17.38 21.95 11.92C21.95 9.27 20.92 6.78 19.05 4.91C17.18 3.03 14.69 2 12.04 2M12.05 3.67C14.25 3.67 16.31 4.53 17.87 6.09C19.42 7.65 20.28 9.72 20.28 11.92C20.28 16.46 16.58 20.15 12.04 20.15C10.56 20.15 9.11 19.76 7.85 19L7.55 18.83L4.43 19.65L5.26 16.61L5.06 16.29C4.24 15 3.8 13.47 3.8 11.91C3.81 7.37 7.5 3.67 12.05 3.67M8.53 7.33C8.37 7.33 8.1 7.39 7.87 7.64C7.65 7.89 7 8.5 7 9.71C7 10.93 7.89 12.1 8 12.27C8.14 12.44 9.76 14.94 12.25 16C12.84 16.27 13.3 16.42 13.66 16.53C14.25 16.72 14.79 16.69 15.22 16.63C15.7 16.56 16.68 16.03 16.89 15.45C17.1 14.87 17.1 14.38 17.04 14.27C16.97 14.17 16.81 14.11 16.56 14C16.31 13.86 15.09 13.26 14.87 13.18C14.64 13.1 14.5 13.06 14.31 13.3C14.15 13.55 13.67 14.11 13.53 14.27C13.38 14.44 13.24 14.46 13 14.34C12.74 14.21 11.94 13.95 11 13.11C10.26 12.45 9.77 11.64 9.62 11.39C9.5 11.15 9.61 11 9.73 10.89C9.84 10.78 10 10.6 10.1 10.45C10.23 10.31 10.27 10.2 10.35 10.04C10.43 9.87 10.39 9.73 10.33 9.61C10.27 9.5 9.77 8.26 9.56 7.77C9.36 7.29 9.16 7.35 9 7.34C8.86 7.34 8.7 7.33 8.53 7.33Z" /></svg></span>
+            <q-btn outline round v-on:click="fontPlus" aria-label="tingkatkan saiz tulisan">
+                <span class="q-icon" aria-hidden="true" role="presentation" style="font-size: 28px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,7L13,12.07L14.41,13.5L17,10.9V17H19V10.9L21.59,13.5L23,12.07L18,7Z" /></svg></span>
             </q-btn>
         </div>
     </aside>
+
+    <section  v-bind:style="{fontSize: fontSize + 'px'}">
     {{ .Content }}
+    </section>
     <aside class="flex justify-start items-center q-my-md">
         <div class="flex column justify-center items-center content-center q-mr-sm">
             <span class="q-icon text-blue-grey" style="font-size: 24px;"><svg viewBox="0 0 24 24"><path fill="currentColor" d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" /></svg></span>
