--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -20,8 +20,8 @@
 
     .q-page {
         padding-bottom: 76px;
+        font-size: 16px;
     }
-
 
     [data-mode="aspect-fit"] {
         margin: 0 -16px;
