--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -86,4 +86,12 @@
         white-space: nowrap;
         border: 0;
     }
+    article{
+        counter-reset: counterp;
+    }
+    .atq::before{
+        content: attr(id) ".\A0";
+    }
+
+    
 </style>
