--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -1,97 +1,22 @@
 <style>
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin-top: 0;
-    }
-
-    .header {
-        background-color: rgba(255, 255, 255, 0.85);
-        backdrop-filter: blur(12px);
-    }
-
-    .header-dark {
-        background-color: rgba(0, 0, 0, 0.85);
-        backdrop-filter: blur(12px);
-    }
-
-    .q-page {
-        padding-bottom: 76px;
-        font-size: 16px;
-    }
-
-    [data-mode="aspect-fit"] {
-        margin: 0 -16px;
-    }
-
-    [data-mode="aspect-fit"]>*:not(img) {
-        padding: 0 16px;
-    }
-
-    @media (max-width: 599.98px) {
-        [data-mode="aspect-fit"] {
-            margin: 0 -8px;
-        }
-
-        [data-mode="aspect-fit"]>*:not(img) {
-            padding: 0 8px;
-        }
-    }
-
-    .footer-link {
-        color: inherit;
-        font-size: .75rem;
-        font-weight: 500;
-        text-decoration: none;
-    }
-
-    a {
-        text-decoration: none;
-    }
-    
-    article{
-        word-wrap: break-word;
-    }
-
-    a.external,a.internal {
-        border-bottom: 1px dotted;
-        color: #0969da;
-        font-weight: 500;
-        outline: 0;
-        text-decoration: none;
-        transition: opacity .2s;
-        white-space: nowrap;
-        fill: #0969da;
-    }
-    .external .q-icon{
-        margin-left:4px;
-        margin-top:-3px;
-    }
-    .text-shadow {
-        color: #fff;
-        text-shadow: 1px 0 5px rgba(0, 0, 0, 0.4);
-    }
-
-    .sr-only {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        white-space: nowrap;
-        border: 0;
-    }
-    article{
-        counter-reset: counterp;
-    }
-    .atq::before{
-        content: attr(id) ".\A0";
-    }
-
-    
+h1,h2,h3,h4,h5,h6{margin-top:0}
+kbd{background:linear-gradient(-225deg,#d5dbe4,#f8f8f8);border-radius:4px;box-shadow:inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px #1e235a66;color:#616161;display:inline-block;font-size:.8em;line-height:1;margin:0 .2em;padding:2px 4px 4px;white-space:nowrap}
+.header{background-color:rgba(255,255,255,0.85);backdrop-filter:blur(12px)}
+.header-dark{background-color:rgba(0,0,0,0.85);backdrop-filter:blur(12px)}
+.q-page{padding-bottom:76px;font-size:16px}
+[data-mode="aspect-fit"]{margin:0 -16px}
+[data-mode="aspect-fit"]>:not(img){padding:0 16px}
+@media (max-width: 599.98px) {
+[data-mode="aspect-fit"]{margin:0 -8px}
+[data-mode="aspect-fit"]>:not(img){padding:0 8px}
+}
+.footer-link{color:inherit;font-size:.75rem;font-weight:500;text-decoration:none}
+a{text-decoration:none}
+article{word-wrap:break-word}
+a.external,a.internal{border-bottom:1px dotted;color:#0969da;font-weight:500;outline:0;text-decoration:none;transition:opacity .2s;white-space:nowrap;fill:#0969da}
+.external .q-icon{margin-left:4px;margin-top:-3px}
+.text-shadow{color:#fff;text-shadow:1px 0 5px rgba(0,0,0,0.4)}
+.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+article{counter-reset:counterp}
+.atq::before{content:attr(id) ".\A0"}
 </style>
