--- a/layouts/partials/headstyleapp.html
+++ b/layouts/partials/headstyleapp.html
@@ -13,7 +13,7 @@ kbd{background:linear-gradient(-225deg,#d5dbe4,#f8f8f8);border-radius:4px;box-sh
 .footer-link{color:inherit;font-size:.75rem;font-weight:500;text-decoration:none}
 a{text-decoration:none}
 article{word-wrap:break-word}
-a.external,a.internal{border-bottom:1px dotted;color:#0969da;font-weight:500;outline:0;text-decoration:none;transition:opacity .2s;white-space:nowrap;fill:#0969da}
+a.external,a.internal{border-bottom:1px dotted;color:#0969da;font-weight:500;outline:0;text-decoration:none;transition:opacity .2s;white-space:normal;fill:#0969da}
 .external .q-icon{margin-left:4px;margin-top:-3px}
 .text-shadow{color:#fff;text-shadow:1px 0 5px rgba(0,0,0,0.4)}
 .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
